# inventory-planning

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
src/: exploration.ipynb  main.ipynb  main.py
src/api/models/: __init__.py  inputs.py  output.py  outputs.py
src/api/routers/: __init__.py  other.py  predict.py
src/helpers/: __init__.py  auth.py  download.py  lifespan.py  logger.py  model.py  predict.py  save.py
src/sql/: __init__.py  set_features_table.sql  set_raw_table.sql  set_skus_features.sql
src/tasks/: __init__.py  evaluate.py  expose.py  predict.py  prepare.py  train.py
