[tool.poetry]
name = "inventory-planning"
version = "0.1.0"
description = "help brands with inventory planning"
authors = ["badr-ayour.el-amri <45420194+elamribadrayour@users.noreply.github.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
typer = "^0.12.3"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
joblib = "^1.4.2"
pydantic = "^2.7.4"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
duckdb = "^1.0.0"
orjson = "^3.10.5"
gdown = "^5.2.0"
pyarrow = "^16.1.0"


[tool.poetry.group.ci.dependencies]
ruff = "^0.4.9"
mypy = "^1.10.0"
pandas-stubs = "^2.2.2.240603"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.35.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
nbformat = "^5.10.4"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
jupyter = "^1.0.0"
pydot = "^2.0.0"
tqdm = "^4.66.4"
scipy = "^1.14.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
